--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
